--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     </div>
 
     <nav>
-       <a href=""> <img src="./Logo.png" alt=""></a>
+       <a href="./index.html"> <img src="./Logo.png" alt=""></a>
         <div id="shop">
-            <a href="">NEX ARRIVALS</a>
-            <a href="">MEN'S</a>
-            <a href="">WOMEN'S</a>
-            <a href="">KID'S</a>
-            <a href="">CLOTHING</a>
-            <a href="">FAN SHOP</a>
-            <a href="">RELEASES</a>
-            <a href="">BRANDS</a>
-            <a href="">SALE</a>
+            <a href="https://www.footlocker.com/category/new-arrivals.html">NEW ARRIVALS</a>
+            <a href="https://www.footlocker.com/category/mens/clothing.html">MEN'S</a>
+            <a href="https://www.footlocker.com/category/womens/clothing.html">WOMEN'S</a>
+            <a href="https://www.footlocker.com/category/kids/clothing.html?sort=name-asc&currentPage=0">KID'S</a>
+            <a href="https://www.footlocker.com/category/mens/clothing.html?sort=relevance&currentPage=0">CLOTHING</a>
+            <a href="https://www.footlocker.com/ncaa.html">FAN SHOP</a>
+            <a href="https://www.footlocker.com/release-dates">RELEASES</a>
+            <a href="https://www.footlocker.com/release-dates">BRANDS</a>
+            <a href="https://www.footlocker.com/release-dates">SALE</a>
         </div>
 
         <div id="last">
@@ -181,6 +181,8 @@
 
 </div>
 
+<h1 id="heading">New Shoe Arrivals </h1>
+
 <div class="shop">
     <div>
         <a href="">
@@ -188,6 +190,7 @@
             <h3>Nike Air Force 1</h3>
         </a>
     </div>
+
 
     <div>
         <a href="">
@@ -241,21 +244,21 @@
     <div>
         <a href=""><img src="https://images.footlocker.com/content/dam/final/flx/site/homepage/2022/november/221104-flx-hp-v4-3up-fl.jpg" alt=""></a>
         <h1>Join FLX for Game-Changing Perks</h1>
-        <p>FLX Members get free shipping, exclusive offers, a birthday gift & earn XPoints for rewards + Head Starts on launches.</p>
+        <p id="para">FLX Members get free shipping, exclusive offers, a birthday gift & earn XPoints for rewards + Head Starts on launches.</p>
         <a href="">Join FLX for Free</a>
     </div>
 
     <div>
         <a href=""><img src="https://images.footlocker.com/content/dam/final/footlocker/site/homepage/2023/february/230213-fl-homepage-fan-shop-nba-3up.jpg" alt=""></a>
         <h1>Unbeatable Fan Styles</h1>
-        <p>Show up and show off the love for your team in these winning fits from our fan shop.</p>
+        <p id="para">Show up and show off the love for your team in these winning fits from our fan shop.</p>
         <a href="">EXPLORE THE FAN SHOP</a>
     </div>
 
     <div>
         <a href=""><img src="https://images.footlocker.com/content/dam/final/footlocker/site/homepage/2022/december/221227-fl-p3up-hoh-3up.jpg" alt=""></a>
         <h1>House of Hoops</h1>
-        <p>House of Hoops by Foot Locker is an ode to basketball. A home for premium kicks from Nike, Jordan and Converse, that’s built by the game.</p>
+        <p id="para">House of Hoops by Foot Locker is an ode to basketball. A home for premium kicks from Nike, Jordan and Converse, that’s built by the game.</p>
         <a href="">
             ENTER HOUSE OF HOOPS</a>
     </div>
@@ -296,9 +299,11 @@
     </div>
 
 
-<div>
+<div id="foot2">
+
     <div class="footerLink">
-        <h3>ABOUT FOOT LOCKER</h3>
+        <h4>ABOUT FOOT LOCKER</h4>
+        <span>&#8594;</span>
         <ul>
             <li><a href="">About Us</a></li>
             <li><a href="">Accessibility Statement</a></li>
@@ -317,7 +322,8 @@
     </div>
 
     <div class="footerLink">
-        <h3>CUSTOMER SERVICE</h3>
+        <h4>CUSTOMER SERVICE</h4>
+        <span>&#8594;</span>
         <ul>
             <li><a href="">Contact Us</a></li>
             <li><a href="">Ordering Help</a></li>
@@ -331,13 +337,68 @@
         </ul>
     </div>
 
+    <div class="footerLink">
+        <h4>QUICK LINKS</h4>
+        <span>	&#8594;</span>
+        <ul>
+            <li><a href="">Store Locator</a></li>
+            <li><a href="">Text Sign Up</a></li>
+            <li><a href="">Launch 101</a></li>
+            <li><a href="">Klarna</a></li>
+            <li><a href="">Coupons</a></li>
+            <li><a href="">Affiliates</a></li>
+            <li><a href="">Fit Guarantee</a></li>
+            <li><a href="">Military Discount</a></li>
+            <li><a href="">Student Discount</a></li>
+            <li><a href="">Release Calendar</a></li>
+            <li><a href="">Start a Return/Exchange</a></li>
+        </ul>
+    </div>
 
+    <div class="footerLink">
 
+        <h4>SOCIAL</h4>
+        <span>	&#8594;</span>
+        <div id="social">
+            <a href=""><img src="./social icon/facebook.png" alt=""></a>
+            <a href=""><img src="./social icon/tw.png" alt=""></a>
+            <a href=""><img src="./social icon/download.png" alt=""></a>
+            <a href=""><img src="./social icon/YT.png" alt=""></a>
+        </div>
+        <div id="pay">
+            <h4>PAYMENT METHODS</h4>
+            <span>	&#8594;</span>
+            <div id="payment">
+            <a href=""><img src="./payment/p1.png" alt=""></a>
+            <a href=""><img src="./payment/p2.png" alt=""></a>
+            <a href=""><img src="./payment/p3.png" alt=""></a>
+            <a href=""><img src="./payment/p4.png" alt=""></a>
+            <a href=""><img src="./payment/p5.png" alt=""></a>
+            <a href=""><img src="./payment/p6.png" alt=""></a>
+            <a href=""><img src="./payment/p7.png" alt=""></a>
+            <a href=""><img src="./payment/p8.png" alt=""></a>
+        </div>
+        <div id="pay2">
+            <a href=""><img src="./payment/L1.png" alt=""></a>
+            <a href=""><img src="./payment/L2.png" alt=""></a>
+        </div>
+        </div>
+    </div>
 </div>
 
 
+<div id="end">
+<a href=""><img src="./Logo.png" alt=""></a>
+<p>
+    © 2023 Footlocker.com, Inc. All Rights Reserved</p>
+</div>
+
 </footer>
 
+<div id="last1">
+    <p>Prices subject to change without notice. Products shown may not be available in our stores.</p>
+    <a href=""><img src="./payment/flag.png" alt=""></a>
+</div>
 
     
 </body>
