--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="box2">
         <div>
             <a href="">Find a Store</a>
-            <a href="">Welcome, Sign in</a>
+            <a href="./login/sign Up/sign.html">Welcome, Sign in</a>
             <a href="">Customer Service</a>
         </div>
     </div>
@@ -27,7 +27,7 @@
        <a href="./index.html"> <img src="./Logo.png" alt=""></a>
         <div id="shop">
             <a href="https://www.footlocker.com/category/new-arrivals.html">NEW ARRIVALS</a>
-            <a href="https://www.footlocker.com/category/mens/clothing.html">MEN'S</a>
+            <a href="./product/mens.html">MEN'S</a>
             <a href="https://www.footlocker.com/category/womens/clothing.html">WOMEN'S</a>
             <a href="https://www.footlocker.com/category/kids/clothing.html?sort=name-asc&currentPage=0">KID'S</a>
             <a href="https://www.footlocker.com/category/mens/clothing.html?sort=relevance&currentPage=0">CLOTHING</a>
@@ -402,5 +402,6 @@
 
     
 </body>
+
 </html>
 
