--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div id="shop">
             <a href="https://www.footlocker.com/category/new-arrivals.html">NEW ARRIVALS</a>
             <a href="./product/mens.html">MEN'S</a>
-            <a href="https://www.footlocker.com/category/womens/clothing.html">WOMEN'S</a>
-            <a href="https://www.footlocker.com/category/kids/clothing.html?sort=name-asc&currentPage=0">KID'S</a>
+            <a href="./product/womens.html">WOMEN'S</a>
+            <a href="./product/kids.html">KID'S</a>
             <a href="https://www.footlocker.com/category/mens/clothing.html?sort=relevance&currentPage=0">CLOTHING</a>
             <a href="https://www.footlocker.com/ncaa.html">FAN SHOP</a>
             <a href="https://www.footlocker.com/release-dates">RELEASES</a>
